<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.orionletizi</groupId>
  <artifactId>audiogen-ui</artifactId>
  <version>0.3-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>audiogen-ui</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <distributionManagement>
    <repository>
      <id>audiogen</id>
      <url>scp://artpopmu@artpopmusic.com:/home4/artpopmu/www/audiogen/maven2/</url>
    </repository>
  </distributionManagement>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ssh</artifactId>
        <version>2.9</version>
      </extension>
    </extensions>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
	    <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-surefire-plugin</artifactId>
	      <version>2.19.1</version>
	      <configuration>
		<forkCount>1</forkCount>
		<reuseForks>true</reuseForks>
		<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
	      </configuration>
	    </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4.3</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <artifactSet>
                <excludes>
                  <exclude>classworlds:classworlds</exclude>
                  <exclude>junit:junit</exclude>
                  <exclude>org.mockito.*</exclude>
                  <exclude>log4j:log4j:jar:</exclude>
                </excludes>
              </artifactSet>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>sh.tak.appbundler</groupId>
        <artifactId>appbundle-maven-plugin</artifactId>
        <version>1.0.4</version>
        <configuration>
          <mainClass>com.orionletizi.audiogen.ui.SongEditor</mainClass>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>bundle</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>audiogen</id>
      <name>The audiogen custom repo.</name>
      <url>http://audiogen.orionletizi.com/maven2/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.controlsfx</groupId>
      <artifactId>controlsfx</artifactId>
      <version>8.40.10</version>
    </dependency>
    <dependency>
      <groupId>com.orionletizi</groupId>
      <artifactId>audiogen</artifactId>
      <version>1.0-alpha-1</version>
    </dependency>
    <dependency>
      <groupId>com.orionletizi</groupId>
      <artifactId>audiogen-sequencer</artifactId>
      <version>0.4-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>com.orionletizi</groupId>
      <artifactId>music-theory</artifactId>
      <version>0.1</version>
    </dependency>
<!--
    <dependency>
      <groupId>org.loadui</groupId>
      <artifactId>testFx</artifactId>
      <version>3.1.2</version>
    </dependency>
-->
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-core</artifactId>
      <version>4.0.2-alpha</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-junit</artifactId>
      <version>4.0.2-alpha</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>openjfx-monocle</artifactId>
      <version>1.8.0_20</version>
    </dependency>
  </dependencies>
</project>
